--- a/src/app/auth/html/recover-account.html
+++ b/src/app/auth/html/recover-account.html
@@ -37,12 +37,12 @@
             <div class="md-padding">
               <md-input-container>
                 <label for="emailField">Email:</label>
-                <md-input
+                <input
                 id="emailField"
                 type="email"
                 required
                 ng-model="user.email"
-                class="chad-form-control"></md-input>
+                class="chad-form-control">
               </md-input-container>
             </div>
 
