--- a/src/app/dashboard/html/developer-active-task-list.html
+++ b/src/app/dashboard/html/developer-active-task-list.html
@@ -4,10 +4,8 @@
   flex-sm="100"
   flex-md="100"
   flex-lg="50"
-  flex-gt-lg="33"
-  class="slide-left"
-  ng-if="switchTasks === 'Active Tasks'"
-  ng-class="animation"
+  flex-gt-lg="30"
+  ng-show="switchTasks === 'Active Tasks'"
   ng-repeat="(id, bulletin) in bulletinBoard | filter:{team:currentUser.team}">
     <active-task-list
     task-list="taskList"
@@ -18,7 +16,7 @@
   </div>
 </div>
 
-<md-tabs ng-if="currentUser.dashView && switchTasks === 'Active Tasks'" class="md-hue-2">
+<md-tabs ng-if="currentUser.dashView && switchTasks === 'Active Tasks'" class="md-hue-2" md-dynamic-height>
   <md-tab label="{{bulletin.title}}" ng-repeat="(id, bulletin) in bulletinBoard | filter:{team:currentUser.team}">
       <active-task-list
       task-list="taskList"
